Translated application to Latvian and formatted Readme.md

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -6,6 +6,6 @@
 
 <div>
 
-  <%= link_to "Back to reservations", reservations_path %>
+  <%= link_to "Atpakaļ pie rezervācijam", reservations_path %>
 </div>
 </div>
