--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -49,12 +49,12 @@
   <div class="card " style="width: 40rem;">
 
     <div class="dropdown container">
-      <%= form.label :user_id, style: "display: block" %>
+      <%= form.label :user_id,"Lietotajs", style: "display: block" %>
       <%= form.select :user_id, user_arr, class: "btn btn-secondary dropdown-toggle" %>
     </div>
 
     <div class="dropdown container">
-      <%= form.label :transport_id, style: "display: block" %>
+      <%= form.label :transport_id,"Transports", style: "display: block" %>
       <%= form.select :transport_id, transport_arr, class: "btn" %>
     </div>
 
@@ -77,7 +77,7 @@
   <br>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Uztaisīt rezervāciju" %>
   </div>
   <script>
       const transportDropdown = document.getElementById("reservation_transport_id");
