--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Reservations</h1>
+<h1>Rezervācijas</h1>
 
 <div id="reservations">
   <table class="table table-striped table-bordered table-hover">
@@ -37,7 +37,7 @@
 
 
 
-<%= link_to "New reservation", new_reservation_path %>
+<%= link_to "Jauna rezervācija", new_reservation_path %>
 
 <!--  <td>-->
 
